# lavish-review

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  README.md  package.json  pyproject.toml
.claude/agents/: review-analyst.md
.claude/commands/: review-branch.md  review-close.md  review-resume.md
.github/vet/: policy.yml
.github/workflows/: ci.yml
docs/adr/: 0001-agent-authored-cockpit.md  0002-deterministic-escape-boundary.md  0003-single-blocking-poll-loop.md  0004-interactive-csp.md  0005-design-critique-scope.md  0006-external-tool-findings.md  0007-bake-prompt-extractor.md  0008-stdlib-config-loader.md  0009-layered-claim-evidence-cockpit.md  0010-goal-evidence-ingestion.md  0011-independent-analysis-context.md  0012-reviewer-state-and-verdict-line.md  0013-self-contained-cross-platform-packaging.md  0014-deck-presentation-mode.md  0015-claim-scoped-questions.md  0016-guided-change-narration-surface.md
docs/spikes/: lavish-live-injection.md  lavish-poll-format.md
prototypes/cockpit-visual-direction/: NOTES.md  prototype.html
src/branch_review/: analysis.py  bake.py  classify.py  collect.py  config.py  coverage.py  dispositions.py  escape.py  evidence.py  feedback.py  install.py  lint.py  render.py  (+3 more)
tests/: test_analysis.py  test_bake.py  test_classify.py  test_collect.py  test_config.py  test_coverage.py  test_dispositions.py  test_escape.py  test_evidence.py  test_feedback.py  test_goal.py  test_install.py  test_lint.py  test_packaging.py  test_render.py  test_runners.py  test_session.py  test_smoke.py  test_weight.py
tools/: sync_vendored.py
(+45 files in other folders)
