[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "branch-review-cockpit"
version = "0.0.0"
description = "Local, AI-assisted Git branch Review Cockpit, opened through Lavish-AXI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.11",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/branch_review"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
